--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,90 +1,94 @@
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container">
-            <div class="row gx-5">
-                <div class="col-lg-4 col-md-6 footer-about">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-4">
-                        <a href="/templates/index.php" class="navbar-brand">
-                            <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>CyberTools</h1>
-                        </a>
-                        <p class="mt-3 mb-4">Pour plus d'informations ou réclamations, n'hésitez pas à nous contacter à cette adresse mail !</p>
-                        <form action="">
-                            <div class="input-group">
-                                <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                                <button class="btn btn-dark">Sign Up</button>
-                            </div>
-                        </form>
-                    </div>
+<!-- Footer Start -->
+<div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="row gx-5">
+            <div class="col-lg-4 col-md-6 footer-about">
+                <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-4">
+                    <a href="{{ url_for('main.index') }}">Accueil</a>
+                    <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>CyberTools</h1>
+                    </a>
+                    <p class="mt-3 mb-4">Pour plus d'informations ou réclamations, n'hésitez pas à nous contacter à cette adresse mail !</p>
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="form-control border-white p-3" placeholder="Votre Email">
+                            <button class="btn btn-dark">S'inscrire</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-lg-8 col-md-6">
-                    <div class="row gx-5">
-                        <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Plus d'infos</h3>
-                            </div>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">Toulouse, France</p>
-                            </div>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">n.mancino03@gmail.com</p>
-                            </div>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-telephone text-primary me-2"></i>
-                                <p class="mb-0">+012 345 67890</p>
-                            </div>
-                            <div class="d-flex mt-4">
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                                <a class="btn btn-primary btn-square" href="#"><i class="fab fa-instagram fw-normal"></i></a>
-                            </div>
+            </div>
+
+            <div class="col-lg-8 col-md-6">
+                <div class="row gx-5">
+                    <!-- Colonne 1 -->
+                    <div class="col-lg-4 col-md-12 pt-5 mb-5">
+                        <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                            <h3 class="text-light mb-0">Plus d'infos</h3>
                         </div>
-                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Liens rapides</h3>
-                            </div>
-                            <div class="link-animated d-flex flex-column justify-content-start">
-                                <a class="text-light mb-2" href="/index"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon compte</a>
-                                <a class="text-light mb-2" href="{{ url_for('register', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>S'inscrire</a>
-                                <a class="text-light mb-2" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se connecter</a>
-                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Générer un mot de passe</a>
-                                <a class="text-light" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
-                            </div>
+                        <div class="d-flex mb-2">
+                            <i class="bi bi-geo-alt text-primary me-2"></i>
+                            <p class="mb-0">Toulouse, France</p>
                         </div>
-                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Liens populaires</h3>
-                            </div>
-                            <div class="link-animated d-flex flex-column justify-content-start">
-                                <a class="text-light mb-2" href="/index"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="{{ url_for('analyze_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Analyser un site</a>
-                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Générer un mot de passe</a>
-                                <a class="text-light mb-2" href="{{ url_for('password') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
-                                <a class="text-light mb-2" href="{{ url_for('dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon compte</a>
-                                <a class="text-light" href="{{ url_for('login', next='dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se connecter</a>
-                            </div>
+                        <div class="d-flex mb-2">
+                            <i class="bi bi-envelope-open text-primary me-2"></i>
+                            <p class="mb-0">n.mancino03@gmail.com</p>
+                        </div>
+                        <div class="d-flex mb-2">
+                            <i class="bi bi-telephone text-primary me-2"></i>
+                            <p class="mb-0">+33 6 12 34 56 78</p>
+                        </div>
+                        <div class="d-flex mt-4">
+                            <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                            <a class="btn btn-primary btn-square" href="#"><i class="fab fa-instagram fw-normal"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- Colonne 2 -->
+                    <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                        <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                            <h3 class="text-light mb-0">Liens rapides</h3>
+                        </div>
+                        <div class="link-animated d-flex flex-column justify-content-start">
+                            <a class="text-light mb-2" href="{{ url_for('main.index') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Accueil</a>                                                        <a class="text-light mb-2" href="{{ url_for('dashboard.dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon compte</a>
+                            <a class="text-light mb-2" href="{{ url_for('auth.register', next='dashboard.dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>S'inscrire</a>
+                            <a class="text-light mb-2" href="{{ url_for('auth.login', next='dashboard.dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se connecter</a>
+                            <a class="text-light mb-2" href="{{ url_for('password.password_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Générer un mot de passe</a>
+                            <a class="text-light" href="{{ url_for('password.password_page')}}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
+                        </div>
+                    </div>
+
+                    <!-- Colonne 3 -->
+                    <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                        <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                            <h3 class="text-light mb-0">Liens populaires</h3>
+                        </div>
+                        <div class="link-animated d-flex flex-column justify-content-start">
+                            <a class="text-light mb-2" href="{{ url_for('main.index') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Accueil</a>                                                        <a class="text-light mb-2" href="{{ url_for('dashboard.dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon compte</a>
+                            <a class="text-light mb-2" href="{{ url_for('analysis.analyze_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Analyser un site</a>
+                            <a class="text-light mb-2" href="{{ url_for('password.password_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Générer un mot de passe</a>
+                            <a class="text-light mb-2" href="{{ url_for('password.password_page') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Tester un mot de passe</a>
+                            <a class="text-light mb-2" href="{{ url_for('main.index') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Mon compte</a>
+                            <a class="text-light" href="{{ url_for('auth.login', next='dashboard.dashboard') }}"><i class="bi bi-arrow-right text-primary me-2"></i>Se connecter</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid text-white" style="background: #061429;">
-        <div class="container text-center">
-            <div class="row justify-content-end">
-                <div class="col-lg-8 col-md-6">
-                    <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
-                        <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">CyberTools</a>. All Rights Reserved. 
-						
-						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-						<!-- Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
-                        -->
-                    </div>
+</div>
+
+<div class="container-fluid text-white" style="background: #061429;">
+    <div class="container text-center">
+        <div class="row justify-content-end">
+            <div class="col-lg-8 col-md-6">
+                <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
+                    <p class="mb-0">
+                        &copy; <a class="text-white border-bottom" href="#">CyberTools</a>. All Rights Reserved.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Footer End -->
+</div>
+<!-- Footer End -->
